Fix layout issues and dropdown spacing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,19 @@ body {
 	margin-top: 10px;
 }
 
+#single-button {
+	margin-top: 10px;
+	border: 1px solid #ccc;
+}
+
+.uib-dropdown-menu li a {
+	padding-top: 5px !important;
+}
+
+.dropdown-menu .divider {
+	margin: 5px 0;
+}
+
 .logo {
 	width: 300px;
 	display: block;
@@ -74,7 +87,7 @@ body {
 	background-color: #fff;
 	vertical-align: top;
 	width: 100%;
-	margin: 14px 7px 0;
+	margin: 14px 7px 5px;
 	padding-bottom: 5px;
 	border-radius: 6px;
 	display: inline-block;
